--- a/messaging-app-backend/package.json
+++ b/messaging-app-backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon app --host 127.0.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
