--- a/messaging-app-backend/package.json
+++ b/messaging-app-backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -16,6 +17,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "~1.9.1"
   }
